update article sprint 2 week 2

--- a/pages/outputs-of-quality-control-process.html
+++ b/pages/outputs-of-quality-control-process.html
@@ -32,11 +32,14 @@
     <main>
         <h2>Exploring the Outputs of the Quality Control Process</h2>
 
-        <p>Quality control is an essential process that ensures that products and services meet the specified quality
-            requirements. The quality control process involves various stages, such as inspection, testing, and
-            corrective action. The outputs of the quality control process are critical in maintaining the overall
-            quality of the products and services. In this blog, we will discuss the main outputs of the quality control
-            process.</p>
+        <p>If we were to keep producing goods and services without ever stopping to check whether what we are producing
+            meets the requirements of consumers, chances are our goods and services will not be successful. This is
+            because there will be a high variation in the quality of those goods and services. In order to tackle this
+            problem, we use quality control. Quality control is an essential process that ensures that products and
+            services meet the specified quality requirements. The quality control process involves various stages, such
+            as inspection, testing, and corrective action. In the process of quality control, its outputs are critical
+            in maintaining the overall quality of the products and services. This blog explores this idea and elaborates
+            on the different outputs of the quality control process.</p>
 
         <figure>
             <img src="../images/Ahmed-mar11-qcgraph.drawio.png" alt="Diagram of Project Quality Management Overview">
@@ -46,97 +49,91 @@
 
         <h3>Project Quality management: </h3>
 
-        <p>So, what is Project Quality management? Project quality management refers to a set of processes, tools, and
-            techniques that are used to ensure that a project's processes and products meet the quality requirements and
-            standards that are relevant to the project. Quality is defined as the totality of characteristics of an
-            entity that bear on its ability to satisfy stated or implied needs. Project quality management involves
-            planning, managing, and controlling the quality of a project, and it must be on an equal level with project
-            scope, time, and cost. The purpose of project quality management is to ensure that the project will satisfy
-            the needs for which it was undertaken, and the main outputs of project quality management are a quality
-            management plan, quality metrics, quality reports, test and evaluation documents, change requests, project
-            management plan updates, project documents updates, quality control measurements, verified deliverables, and
-            work performance information.</p>
+        <p>So, what is Project Quality Management? It refers to the means of achieving the highest quality requirements
+            and standards of a given project. The word quality itself refers to the satisfaction of a product or service
+            of all its requirements and needs for a given user or client. To manage project quality one must plan and
+            control the projects different knowledge areas, such as time, cost and scope. It is imperative that a
+            project fulfills all the needs and requirements of why it was undertaken (specifically the needs of the
+            stakeholders). Sometimes, the requirements or needs of the stakeholders are not explicitly stated,
+            therefore, even if a team fulfills the written requirements of the project, chances are that the
+            stakeholders needs are not going to be fully achieved. Therefore, it is important to establish good project
+            quality standards to ensure maximum benefit to the stakeholders and to minimize the various costs of the
+            project.</p>
 
-        <h3>Project Quality Management: </h3>
-        <p>So, what is Project Quality management? Project quality management refers to a set of processes, tools, and
-            techniques that are used to ensure that a project's processes and products meet the quality requirements and
-            standards that are relevant to the project. Quality is defined as the totality of characteristics of an
-            entity that bear on its ability to satisfy stated or implied needs. Project quality management involves
-            planning, managing, and controlling the quality of a project, and it must be on an equal level with project
-            scope, time, and cost. The purpose of project quality management is to ensure that the project will satisfy
-            the needs for which it was undertaken, and the main outputs of project quality management are a quality
-            management plan, quality metrics, quality reports, test and evaluation documents, change requests, project
-            management plan updates, project documents updates, quality control measurements, verified deliverables, and
-            work performance information.</p>
 
-        <h3>Quality Control Measurements: </h3>
+        <h3>Measurements for Quality Control: </h3>
 
-        <p>The results of the quality control procedure within project quality management are quality control
-            measurements. Measurements of quality control are used to ensure that particular project outcomes are
-            complete, accurate, and up to par with client expectations. Performance metrics, defect counts, error rates,
-            and client happiness scores are just a few examples of the quality control metrics that can be used. These
-            measurements are used to evaluate the project's advancement and identify any necessary corrective action to
-            get it back on schedule. In order to make sure that the project's products and procedures adhere to the
-            quality standards and requirements specified in the quality management plan, quality control measurements
-            are a crucial component of project quality management.</p>
+        <p>Using methods such as statistical sampling, we gain different quality control measurements. These
+            measurements help ensure that a particular project outcome is complete and accurate, as well as up to par
+            with the stakeholder’s expectations. Performance metrics, defect counts, error rates and client scores are a
+            few examples of these. These measurements allow to realize the project’s advancement and allows teams to
+            catch problems early and rectify them. If there is a problem in the project that needs to be fixed, or there
+            seems to be large variation between the quality of the project and the stakeholder’s needs, it becomes
+            easier to identify those things using quality control measurements. These crucial measurements allow
+            standards to be created and then maintained. These also allow for a plan to be made to ensure quality
+            standards for the project’s future.</p>
 
         <h3>Verified Deliverables:</h3>
+
         <p>One of the primary outcomes of the quality control procedure within project quality management is verified
-            deliverables. Deliverables from a project that have been reviewed and validated to make sure they adhere to
-            the quality criteria and standards outlined in the quality management plan are known as verified
-            deliverables. Depending on the project and deliverable, the review and validation process may entail
-            testing, inspection, or other kinds of quality control measurements.</p>
-        <p>The products are regarded as verified deliverables once they have undergone validation. Verified deliverables
-            are crucial because they serve as verifiable proof of the project's achievement. They can be used to show
-            stakeholders that the project is accomplishing its goals and that the delivered goods adhere to the
-            necessary quality standards. Verified deliverables may also serve as inputs to subsequent project phases or
-            processes, such as the monitoring and controlling process or the project closure process.</p>
+            deliverables. This means that deliverables for a project are complying with the expectations and needs of
+            the stakeholders, the acceptance criteria of the project, as well as the quality management plan. Once these
+            requirements are met, the deliverables are said to be verified deliverables. Depending on the project and
+            deliverable, the review and validation process may entail testing, inspection, or other kinds of quality
+            control measurements.</p>
+
+        <p>Verified deliverables are crucial because they serve as verifiable proof of the project's achievement. They
+            can be used to show stakeholders that the project is accomplishing its goals and that the delivered goods
+            adhere to the necessary quality standards. Verified deliverables may also serve as inputs to subsequent
+            project phases or processes, such as the monitoring and controlling process or the project closure process.
+        </p>
 
         <h3>Work Performance Information: </h3>
+
         <p>The data and status information gathered during project execution that reveals how the project is progressing
             in terms of time, expense, scope, risks, and other important performance indicators is known as work
             performance information (WPI). Project managers and other stakeholders can use this data to make
-            well-informed choices and take the appropriate corrective action to keep the project on schedule. The status
-            of project deliverables, the quantity of work completed, the real costs spent, and the state of risks and
-            issues are a few examples of work performance information.</p>
+            well-informed choices and take the appropriate corrective action to keep the project on schedule. </p>
 
-
-        <p>Work performance information includes the status of project deliverables, the amount of completed work, the
-            remaining work to be performed, actual costs incurred, and the status of risks and problems. It is to be
+        <p>Work performance information facilitates the status of project deliverables, the amount of completed work,
+            the remaining work to be performed, actual costs incurred, and the status of risks and problems. It is to be
             well known that work performance is an important yet often overlooked aspect of quality control within the
             scope of project management. Work performance information is often compiled into reports and presented to
             stakeholders during project review meetings to provide visibility into project progress and performance.</p>
 
         <h3>Change Requests: </h3>
+
         <p>A formal request for a change to the project's scope, timetable, or budget is known as a change request.
             Change requests may be made for a number of causes, including adjustments to project requirements,
             environmental factors, or stakeholder expectations. Before any changes are made, these requests must first
             be officially reviewed, approved, or rejected by the relevant project authority.</p>
 
         <h3>Project Management Plan Updates: </h3>
-        <p>The Project Management Plan is a formal record used in project management that lists the project's
-            objectives, schedule, financial constraints, and risks. Updates to the project management plan are
-            modifications made to the document in reaction to new circumstances or specifications. Updates to all plans
-            must be carefully analyzed, understood, evaluated, and only then forwarded. Indeed, these updates are
-            necessary to ensure that everyone is aware of the project's present situation and to keep it moving in the
-            right direction.</p>
+
+        <p>The Project Management Plan is a formal project management document that details the project’s objectives,
+            schedule, constraints and costs. This plan may be changed after realizing the need to improve it in light of
+            new discoveries about the project. These updates must be carefully analyzed and evaluated to ensure that
+            they are correct and needed. Indeed, these updates allow all team members to be on the same page.</p>
 
         <h3>Project Document Updates: </h3>
+
         <p>Project documents are important documents created throughout the project lifecycle, such as plans, reports,
             schedules, and specifications. Project document updates refer to changes or revisions made to these
-            documents to reflect the current status of the project. These updates can relate to any aspect of the
-            project, such as scope, schedule, cost, quality, or risks. It is crucial to keep project documents up to
-            date to ensure that all team members have access to the latest and accurate information. This enables them
-            to make informed decisions and take appropriate actions.</p>
+            documents to reflect the current status of the project. It is crucial to keep project documents up to date
+            to ensure that all team members have access to the latest and accurate information. This enables them to
+            make informed decisions and take appropriate actions.</p>
 
         <h3>Conclusion:</h3>
-        <p>In conclusion, project quality management is a crucial process that ensures products and services meet the
-            specified quality requirements. Quality control measurements, verified deliverables, work performance
-            information, change requests, project management plan updates, and project document updates are the main
-            outputs of the quality control process. These outputs play a significant role in maintaining the overall
-            quality of the project and ensuring that it meets its objectives. Keeping project documents up to date and
-            making appropriate changes to the project management plan is essential to ensure that everyone involved in
-            the project is aware of the current situation and that the project is moving in the right direction.</p>
+
+        <p>The project quality control process is crucial in ensuring that the project and all its constituents adhere
+            to the standards of quality set forth by stakeholders, the project team itself, and all relevant industry or
+            government quality standards. The Outputs of these are measurements for quality control, verified
+            deliverables, work performance information, change requests, project management plan updates, and project
+            document updates. These outputs work together to provide quality control for the project and thus improves
+            the quality of products and services being produced at the end of a project. Naturally, better quality also
+            means that there is less waste and the work flow in the project is more efficient. Therefore, quality
+            control in project management is very important.</p>
+
 
         <h4>References:</h4>
         <ul>
