user story submitted

--- a/pages/quality-management-scope-management.html
+++ b/pages/quality-management-scope-management.html
@@ -31,7 +31,7 @@
   <main>
     <h2>Relation Between Quality Management and Scope Management</h2>
 
-    <!--<img src="../images/article-img">-->
+    <img src="../images/quality-control.jpeg">
 
     <p>
       Quality is a compilation of characteristics of an entity that make it possible 
