--- a/pages/resource-man-details.html
+++ b/pages/resource-man-details.html
@@ -31,7 +31,7 @@
   <main>
     <h2>Project Resource Management - The Basics</h2>
     <p>By: Daniel Cisneros Siliezar</p>
-    <img src="../images/PRM-diagram.png">
+    <img src="../images/PRM-diagram.png" width="80%">
 
 
     <p>
@@ -71,7 +71,7 @@
         As you learn more about the processes of project resource management, you will become more knowledgeable and efficient as an Agile project manager. It is important to know what resources to use and use them effectively for the upcoming project that you were assigned.
     </p>
 
-    <img src="../images/what-are-project-resources.png">
+    <img src="../images/what-are-project-resources.png" width="80%">
     <h3>Why is Project Resource Management Important?</h3>
     <p>
         People determine the failure or success of a business and their projects. One of the toughest challenges you will face as a project manager is managing human resources. Human resource management is a critical part of project resource management and it is imperative that you, a project manager, understand the problems within the workforce of IT and their involvement in the future.
