--- a/pages/motivation-influence.html
+++ b/pages/motivation-influence.html
@@ -31,7 +31,7 @@
   <main>
     <h2>Motivation and Influence</h2>
 
-    <img src="../images/motivation-influence.jpeg">-->
+    <img src="../images/motivation-influence.jpeg">
 
     <p>As a project manager, you should develop an understanding of how to motivate and influence your team to achieve the success of your project. These skills are non-technical and will transfer over from one project to the next. Throughout your career, you will likely interact with people who have a variety of motivation styles. You will also likely be put in positions where you need to utilize different forms of influence to maintain effectiveness as a leader.</p>
 
