--- a/pages/motivation-influence.html
+++ b/pages/motivation-influence.html
@@ -62,6 +62,9 @@
     <p>Authority is the right to issue orders based on ranking in the organization's hierarchy. Assignment is the project manager’s ability to influence a worker’s placement on future projects. Budget is the perceived ability of a project manager to direct and authorize the use of discretionary funds. Promotion is the ability to give an employee a better position in the company. Money is the ability to increase pay and benefits. Penalty is the degree to which a project manager can dispense or cause punishment. Work challenge is the ability to assign work that taps into a worker’s intrinsic motivation because it maximizes their enjoyment of a particular task. Expertise is the specific knowledge that a project manager has which others consider important. Friendship is the ability of a project manager to establish friendly and healthy relationships with others. According to research conducted by Thamhain and Wilemon, projects are more likely to fail when managers put more emphasis on utilizing authority, money or penalty to influence their teams. On the other hand, teams were found to be more effective when managers focused more on work challenge and expertise, resulting in a higher likelihood of their projects’ success.</p>
 
     <p>With your newfound understanding of motivation and influence, you will be more effective as a team leader. Be sure to focus on using work challenge, expertise, and friendship to have more influence on your team. This will help you establish a positive work environment and will improve the likelihood of your project’s success. Additionally, be mindful of theory Y and Z when trying to motivate your employees. Looking out for your team members will improve their productivity and help the project succeed.</p>
+
+    <h3>Resources</h3>
+    <p>Information Technology Project Management Ninth Edition by Kathy Schwalbe Ph.D., PMP</p>
   </main>
 
   <footer>
