--- a/pages/improving-project-communication.html
+++ b/pages/improving-project-communication.html
@@ -31,6 +31,13 @@
   <main>
     <h2>Modern Project Team Communication</h2>
 
+    <figure>
+      <img src="../images/Ahmed-Kanban-example.JPG" alt="Kanban Board Example">
+      <figcaption><strong>Figure 1</strong> An example of a Kanban Board <a
+          href="https://it.tufts.edu/book/export/html/2116">(Source)</a>
+      </figcaption>
+    </figure>
+
     <p>Communication is a vital skill in any project or facet of a workplace. Although the importance of clear and
       effective communication is conspicuous, one finds people focusing more on technical skill development than
       communication improvement. Thus, it is not hard to find teams of highly qualified technical experts having trouble
@@ -118,7 +125,7 @@
     <ul>
       <li><a href="https://www.pmi.org/learning/library/managing-communications-effectively-efficiently-5916">Managing
           communications effectively and efficiently</a></li>
-      <li>Schwalbe, Kathy. “Chapter 8: Project Quality Management.” Information Technology Project Management,
+      <li>Schwalbe, Kathy. “Chapter 10: Project Communications Management.” Information Technology Project Management,
         Cengage
         Learning, 2019. </li>
     </ul>
