--- a/pages/activity-duration-estimates.html
+++ b/pages/activity-duration-estimates.html
@@ -17,16 +17,7 @@
 </head>
 
 <body>
-  <header>
-    <h1>
-      <a href="/it-project-management/index.html"><img src="../images/logo.png" width="400" height="400"></a>
-    </h1>
-
-    <form class="search">
-      <input class="search" type="text" placeholder="search">
-      <input type="submit" value="">
-    </form>
-  </header>
+  <div data-include="components/header.html"></div>
 
   <main>
     <h2>Activity Duration Estimates: The Essential Tools and Techniques for Project Managers</h2>
@@ -135,19 +126,8 @@
 
   </main>
 
-  <footer>
-    <div>
-      <ul>
-        <li><a class="font-2rem">&copy; IT Project Management</a></li>
-        <li><a class="font-2rem">About</a></li>
-        <li><a class="font-2rem">Contact</a></li>
-      </ul>
-      <ul>
-        <li><a><i class="fa-brands fa-twitter font-2rem"></i></a></li>
-        <li><a><i class="fa-brands fa-facebook font-2rem"></i></a></li>
-      </ul>
-    </div>
-  </footer>
+  <div data-include="components/footer.html"></div>
+  <script src="./scripts/HTMLInclude.js"></script>
 </body>
 
 </html>
