--- a/pages/activity-duration-estimates.html
+++ b/pages/activity-duration-estimates.html
@@ -17,7 +17,7 @@
 </head>
 
 <body>
-  <div data-include="components/header.html"></div>
+  <div data-include="../components/header.html"></div>
 
   <main>
     <h2>Activity Duration Estimates: The Essential Tools and Techniques for Project Managers</h2>
@@ -126,8 +126,8 @@
 
   </main>
 
-  <div data-include="components/footer.html"></div>
-  <script src="./scripts/HTMLInclude.js"></script>
+  <div data-include="../components/footer.html"></div>
+  <script src="../js/HTMLInclude.js"></script>
 </body>
 
 </html>
