--- a/pages/template.html
+++ b/pages/template.html
@@ -10,23 +10,14 @@
   <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;500;700&display=swap" rel="stylesheet">
   <link rel="stylesheet" type="text/css" href="../styles/default.css">
   <link rel="stylesheet" type="text/css" href="../styles/article.css">
-  
+
 
   <script defer src="../js/script.js"></script>
   <script defer src="https://kit.fontawesome.com/bb88c945f0.js" crossorigin="anonymous"></script>
 </head>
 
 <body>
-  <header>
-    <h1>
-      <a href="/it-project-management/index.html"><img src="../images/logo.png" width="400" height="400"></a>
-    </h1>
-
-    <form class="search">
-      <input class="search" type="text" placeholder="search">
-      <input type="submit" value="">
-    </form>
-  </header>
+  <div data-include="../components/header.html"></div>
 
   <main>
     <h2>Article Title</h2>
@@ -37,19 +28,8 @@
     <p></p>
   </main>
 
-  <footer>
-    <div>
-      <ul>
-        <li><a class="font-2rem">&copy; IT Project Management</a></li>
-        <li><a class="font-2rem">About</a></li>
-        <li><a class="font-2rem">Contact</a></li>
-      </ul>
-      <ul>
-        <li><a><i class="fa-brands fa-twitter font-2rem"></i></a></li>
-        <li><a><i class="fa-brands fa-facebook font-2rem"></i></a></li>
-      </ul>
-    </div>
-  </footer>
+  <div data-include="../components/footer.html"></div>
+  <script src="../js/HTMLInclude.js"></script>
 </body>
 
 </html>
