Adding Dark mode

--- a/pages/activity-duration-estimates.html
+++ b/pages/activity-duration-estimates.html
@@ -18,6 +18,9 @@
 
 <body>
   <div data-include="../components/header.html"></div>
+  <div id="icon-container">
+    <i id="icon" class="fas fa-moon"></i>
+  </div>
 
   <main>
     <h2>Activity Duration Estimates: The Essential Tools and Techniques for Project Managers</h2>
@@ -128,6 +131,8 @@
 
   <div data-include="../components/footer.html"></div>
   <script src="../js/HTMLInclude.js"></script>
+  <script src="https://kit.fontawesome.com/your-kit-id.js" crossorigin="anonymous"></script>
+  <script src="../js/script.js"></script>
 </body>
 
 </html>
