--- a/pages/template.html
+++ b/pages/template.html
@@ -18,6 +18,8 @@
 
 <body>
   <div data-include="../components/header.html"></div>
+  <label for="toggle-switch">Dark Mode:</label>
+  <input type="checkbox" id="toggle-switch">
 
   <main>
     <h2>Article Title</h2>
@@ -30,6 +32,30 @@
 
   <div data-include="../components/footer.html"></div>
   <script src="../js/HTMLInclude.js"></script>
+  <!-- DARK MODE -->
+  <script>
+    const toggleSwitch = document.getElementById("toggle-switch");
+    const body = document.body;
+    const divs = document.querySelectorAll('div');
+
+    toggleSwitch.addEventListener("change", () => {
+      if (toggleSwitch.checked) {
+        body.style.backgroundColor = "black";
+        body.style.color = "white";
+        divs.forEach(div => {
+          div.style.backgroundColor = "black";
+          div.style.color = "white";
+        });
+      } else {
+        body.style.backgroundColor = "";
+        body.style.color = "";
+        divs.forEach(div => {
+          div.style.backgroundColor = "";
+          div.style.color = "";
+        });
+      }
+    });
+  </script>
 </body>
 
 </html>
