--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
       <a href="/it-project-management/index.html"><img src="./images/logo.png" width="400" height="400"></a>
     </h1>
 
-    <label for="toggle-switch">Toggle Switch:</label>
+    <label for="toggle-switch">Dark Mode:</label>
     <input type="checkbox" id="toggle-switch">
 
     <form class="search">
@@ -62,6 +62,7 @@
       </ul>-->
     </div>
 
+    <!-- DARK MODE -->
     <script>
       const toggleSwitch = document.getElementById("toggle-switch");
       const body = document.body;
