added image tp sp4week1

--- a/pages/common-risks-it.html
+++ b/pages/common-risks-it.html
@@ -24,6 +24,12 @@
     <main>
         <h2>Common risks with IT projects</h2>
 
+        <figure>
+            <img src="../images/Ahmed-pexels-dmitriy-ganin-7772722.jpg" alt="Man makinga a risky jump">
+            <figcaption><strong>Figure 1</strong> Risks come in many different forms
+            </figcaption>
+        </figure>
+
         <p>Risk in the scope of projects is the potential for some aspects of the project to go wrong, resulting in a
             negative impact on the project’s success. Since any project, whether it is an Information Technology (IT)
             project or not, comes with risks, naturally, project managers try to understand, analyze, and combat this
